update build workflow

--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -13,11 +13,9 @@ jobs:
     
     steps:
     - uses: actions/checkout@v2
-    - name: configure
-      run: ./configure
-    - name: make
-      run: make
-    - name: make check
-      run: make check
-    - name: make distcheck
-      run: make distcheck
+    - name: makeBuildDir
+      run: mkdir build && cd build
+    - name: cmake project generation
+      run: cmake ..
+    - name: build
+      run: cmake --build .
